added try catch to backend and response entity

--- a/frontend/src/components/Investor/InvestorDashboard.scss
+++ b/frontend/src/components/Investor/InvestorDashboard.scss
@@ -107,6 +107,7 @@ $input-text-color: #AEB2B6;
         }
 
         .right {
+            border: none;
             width: 50%;
             height: 100%;
             padding: 10px;
